k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iptv-app
  namespace: iptv
spec:
  selector:
    app: iptv-app
  ports:
    - port: 80
      targetPort: 6502
  type: ClusterIP
